--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "description": "Roarr log writer for use in a web browser.",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/github": "^8.0.7",
+    "@semantic-release/npm": "^9.0.2",
     "@types/globalthis": "^1.0.1",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/node": "^16.11.7",
@@ -36,7 +39,7 @@
     "husky": "^7.0.4",
     "nyc": "^15.1.0",
     "roarr": "^7.7.0",
-    "semantic-release": "^18.0.0",
+    "semantic-release": "^20.1.0",
     "sinon": "^12.0.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
